<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
    android:background="@drawable/samsung">
    <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:text="@string/login"></TextView>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true" android:layout_toRightOf="@+id/textView1" android:text="@string/submit_label" android:id="@+id/login_final_submit"></Button>
    <TextView android:layout_width="wrap_content" android:text="@string/password_label" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:layout_marginLeft="25dp" android:layout_marginTop="124dp"></TextView>
    <EditText android:id="@+id/login_final_password" android:inputType="textPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/textView2" android:layout_alignBottom="@+id/textView2" android:layout_alignParentRight="true" android:layout_alignLeft="@+id/textView1"></EditText>
</RelativeLayout>
